--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
